--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "format": "prettier -w src/App.jsx && prettier -w src/**/*.jsx"
   },
   "dependencies": {
     "react": "^18.2.0",
