--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "vite build",
     "preview": "vite preview",
     "format": "prettier -w src/App.jsx && prettier -w src/**/*.jsx",
-    "lint": "eslint src/App.jsx"
+    "lint": "eslint src/App.jsx",
+    "lint-fix": "eslint src/**/*.js --cache --fix"
   },
   "dependencies": {
     "react": "^18.2.0",
