--- a/package.json
+++ b/package.json
@@ -32,12 +32,12 @@
   },
   "lint-staged": {
     "*.js": [
-      "eslint --cache --fix",
-      "prettier --write"
+      "prettier --write",
+      "eslint --cache --fix"
     ],
     "*.jsx": [
-      "eslint --cache --fix",
-      "prettier --write"
+      "prettier --write",
+      "eslint --cache --fix"
     ],
     "*.html": [
       "prettier --write"
